--- a/css/styles.css
+++ b/css/styles.css
@@ -71,6 +71,16 @@ img {
 .link.active {
   color: var(--active);
 }
+.link.active::after {
+  content: "";
+  background-color: var(--active);
+  position: absolute;
+  left: 0;
+  top: calc(100% + 28px);
+  width: 100%;
+  height: 4px;
+}
+
 .link:active,
 .link:focus {
   text-decoration: none;
